fixed about hidden overflow css

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -2,7 +2,3 @@
     color: aliceblue;
     width: 60%;
 }
-
-/* ::-webkit-scrollbar {
-    width: 0;
-} */
